--- a/components/versions.html
+++ b/components/versions.html
@@ -53,9 +53,24 @@
                         BUG FIX: Il tag di tipo 14 sul canvas non riceveva l'evento click<br>
                         BUG FIX: Risolto il problema della visualizzazione di alcune mappe dei piani(immagini) sul canvas<br>
                         BUG FIX: Risolto il problema del click su un alarme di un tag outdoor che non portava alla location<br>
+
                     </td>
                     <td md-cell>25/03/2019</td>
                 </tr>
+
+                <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
+                    <td md-cell>1.2.0</td>
+                    <td md-cell>
+                        UPDATES: Aggiunto messaggio di avviso quando si clicca su un tag in allarme che non e' dell'utente logatto<br>
+                        UPDATES: Inserite delle select per visualizzare gli oggetti offline al posto delle chips<br>
+                        UPDATES: Se si ha solo una location ed e' segnalata come unica location allora alla login si entra direttamente nella location
+                        BUG FIX: Quando si aggiungeva e subito rimuoveva un piano no si apriva piu' la tabella delle ancore<br>
+                        BUG FIX: I disegni a volte non si carricavano correttamente sulla mappa<br>
+                    </td>
+                    <td md-cell>10/04/2019</td>
+                </tr>
+
+
                 </tbody>
             </table>
         </md-table-container>
