--- a/components/tag-not-found-alert.html
+++ b/components/tag-not-found-alert.html
@@ -13,7 +13,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">TAG FUORI LOCATION</h1>
+                <h1 class=" font-iceberg font-x-large">{{title}}</h1>
             </div>
         </div>
     </md-toolbar>
@@ -22,7 +22,7 @@
     <!--popup content-->
     <md-content class="popup-padding">
         <div layout="column" layout-align="center center">
-            <p class="color-red">Non sei autorizzato a visualizzare la posizione di questo tag!</p>
+            <p class="color-red">{{message}}</p>
         </div>
     </md-content>
     <!--end popup content-->
