BUG FIXED VERSION
Risolto i bug che mi ha segnalato simone e consegnato la versione serializzata

--- a/components/anchors-table.html
+++ b/components/anchors-table.html
@@ -107,6 +107,9 @@
                             src="../SMARTSTUDIO/img/icons/delete_trash_24.png" alt="Cancella ancora" title="Cancella ancora"></td>
 
                 </tr>
+                <tr md-row ng-show="tableEmpty">
+                    <td md-cell colspan="13" class="text-center color-red">Nessun risultato trovato</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
