--- a/components/outdoor-location.html
+++ b/components/outdoor-location.html
@@ -63,8 +63,8 @@
                             <h1 class="font-iceberg color-ottanio">SMART STUDIO</h1>
                         </div>
 
-                        <div layout="column" id="menu-container">
-                            <md-list ng-controller="menuController">
+                        <div ng-controller="menuController" layout="column" id="menu-container">
+                            <md-list >
                                 <md-list-item ng-click="registry()"><p>Tabella WeTag</p><img
                                         src="../SMARTSTUDIO/img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
                                         alt=""></md-list-item>
@@ -86,7 +86,7 @@
                                     <label>Cerca WeTag</label>
                                     <md-select ng-model="selectedTag">
 
-                                        <md-option ng-repeat="tag in tags" ng-value="tag.name">
+                                        <md-option ng-repeat="tag in menuTags" ng-value="tag.name">
                                             {{tag.name}}
                                         </md-option>
                                     </md-select>
