--- a/components/versions.html
+++ b/components/versions.html
@@ -3,7 +3,7 @@
     <md-toolbar id="popup-toolbar">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
-                <img src="../SMARTSTUDIO/img/icons/close-icon.png" alt="Close" title="Close"/>
+                <img src="../SMARTSTUDIO/img/icons/close-icon.png" aria-label="Close" alt="Close" title="Close"/>
             </md-button>
         </div>
 
@@ -39,16 +39,16 @@
 
                 <tbody md-body>
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell>1.0.0</td>
+                    <td md-cell class="color-orange">1.0.0</td>
                     <td md-cell>Prima versione in produzione del gestionale Smart Studio</td>
                     <td md-cell>20/03/2019</td>
                 </tr>
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell>1.1.0</td>
+                    <td md-cell class="color-orange">1.1.0</td>
                     <td md-cell>
-                        Aggiunta la possibilita' di vedere i tag spenti e dispersi, oltre a quelli online e offline<br>
-                        Aggiunto nella tabella dei tag la visualizzazione dei tag online(verde) e offline/spenti/dispersi(grigi)<br>
-                        Aggiunta la visualizzazione dell'icona dei tag offline anche quando c'e' almeno un tag disperso/spento<br>
+                        UPDATES: Aggiunta la possibilita' di vedere i tag spenti e dispersi, oltre a quelli online e offline<br>
+                        UPDATES: Aggiunto nella tabella dei tag la visualizzazione dei tag online(verde) e offline/spenti/dispersi(grigi)<br>
+                        UPDATES: Aggiunta la visualizzazione dell'icona dei tag offline anche quando c'e' almeno un tag disperso/spento<br>
                         BUG FIX: Rimossa la virgola in fondo alla stringa dei Neighbors e Permitted<br>
                         BUG FIX: Il tag di tipo 14 sul canvas non riceveva l'evento click<br>
                         BUG FIX: Risolto il problema della visualizzazione di alcune mappe dei piani(immagini) sul canvas<br>
@@ -59,15 +59,19 @@
                 </tr>
 
                 <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
-                    <td md-cell>1.2.0</td>
+                    <td md-cell class="color-orange">1.2.0</td>
                     <td md-cell>
                         UPDATES: Aggiunto messaggio di avviso quando si clicca su un tag in allarme che non e' dell'utente logatto<br>
                         UPDATES: Inserite delle select per visualizzare gli oggetti offline al posto delle chips<br>
-                        UPDATES: Se si ha solo una location ed e' segnalata come unica location allora alla login si entra direttamente nella location
-                        BUG FIX: Quando si aggiungeva e subito rimuoveva un piano no si apriva piu' la tabella delle ancore<br>
+                        UPDATES: Se si ha solo una location ed e' segnalata come unica location allora alla login si entra direttamente nella location<br>
+                        UPDATES: Nell'inserimento sito l'input del raggio deve avere il placeholder "copertura in °"<br>
+                        UPDATES: Serializzazione delle chiamate al server<br>
+                        UPDATES: Tolto l'auto zoom sulle location outdoor<br>
+                        BUG FIX: Hint uguali sui tasti di cancellazione disegno e inserimento ancora<br>
                         BUG FIX: I disegni a volte non si carricavano correttamente sulla mappa<br>
+                        BUG FIX: A volte caricava male alcune tabelle<br>
                     </td>
-                    <td md-cell>10/04/2019</td>
+                    <td md-cell>11/04/2019</td>
                 </tr>
 
 
