--- a/components/versions.html
+++ b/components/versions.html
@@ -49,6 +49,7 @@
                         UPDATES: Aggiunta la possibilita' di vedere i tag spenti e dispersi, oltre a quelli online e offline<br>
                         UPDATES: Aggiunto nella tabella dei tag la visualizzazione dei tag online(verde) e offline/spenti/dispersi(grigi)<br>
                         UPDATES: Aggiunta la visualizzazione dell'icona dei tag offline anche quando c'e' almeno un tag disperso/spento<br>
+                        UPDATES: Implementata la visualizzazione dell'icona dei tag offline anche quando c'e' un tag disperso/spento<br>
                         BUG FIX: Rimossa la virgola in fondo alla stringa dei Neighbors e Permitted<br>
                         BUG FIX: Il tag di tipo 14 sul canvas non riceveva l'evento click<br>
                         BUG FIX: Risolto il problema della visualizzazione di alcune mappe dei piani(immagini) sul canvas<br>
@@ -63,13 +64,25 @@
                     <td md-cell>
                         UPDATES: Aggiunto messaggio di avviso quando si clicca su un tag in allarme che non e' dell'utente logatto<br>
                         UPDATES: Inserite delle select per visualizzare gli oggetti offline al posto delle chips<br>
+                        UPDATES: Inserito messaggio popup quando si cerca un tag non ancora censito<br>
                         UPDATES: Se si ha solo una location ed e' segnalata come unica location allora alla login si entra direttamente nella location<br>
                         UPDATES: Nell'inserimento sito l'input del raggio deve avere il placeholder "copertura in °"<br>
                         UPDATES: Serializzazione delle chiamate al server<br>
                         UPDATES: Tolto l'auto zoom sulle location outdoor<br>
+                        UPDATES: Le location outdoor vengono marcate con la icona di default delle location outdoor se non hanno una icona di default<br>
                         BUG FIX: Hint uguali sui tasti di cancellazione disegno e inserimento ancora<br>
                         BUG FIX: I disegni a volte non si carricavano correttamente sulla mappa<br>
                         BUG FIX: A volte caricava male alcune tabelle<br>
+                        BUG FIX: Risolto il problema del click sui marker di maps che a volte non lo prendeva<br>
+                    </td>
+                    <td md-cell>11/04/2019</td>
+                </tr>
+
+                <tr md-row md-select="floor" md-on-select="logItem" md-auto-select="true">
+                    <td md-cell class="color-orange">1.2.0</td>
+                    <td md-cell>
+                        UPDATES: Riposizionamento delle ancore da un piano ad un altro dalla modalita' disegna<br>
+                        BUG FIX: Risolto il problema del click sui marker di maps che a volte non lo prendeva<br>
                     </td>
                     <td md-cell>11/04/2019</td>
                 </tr>
