INTERMEDIATE USER CRUD
Implementata la tabella utenti con le operazioni CRUD che viene visualizzata quando e' logato un utente intermedio.

--- a/components/home.html
+++ b/components/home.html
@@ -57,8 +57,11 @@
 
                         <div layout="column">
                             <md-list>
-                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="openLocations()"><p>Gestione siti
+                                <md-list-item ng-show="homeCtrl.isAdmin || homeCtrl.isUserManager" ng-click="openLocations()"><p>Gestione siti
                                 </p><img src="../SMARTSTUDIO/img/icons/menu/add-location.png"
+                                         class="menu-list-icon" alt=""></md-list-item>
+                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="openUserManager()"><p>Gestione utenti
+                                </p><img src="../SMARTSTUDIO/img/icons/menu/user-manager-icon.png"
                                          class="menu-list-icon" alt=""></md-list-item>
                                 <md-list-item ng-click="registry()"><p>Gestione WeTag</p><img
                                         src="../SMARTSTUDIO/img/icons/menu/anagrafica-icon.png" class="menu-list-icon"
