--- a/components/insert-user.html
+++ b/components/insert-user.html
@@ -42,6 +42,15 @@
                 </div>
             </md-input-container>
 
+            <md-input-container md-no-float class="margin-bottom-0">
+                <input required type="text" ng-model="user.email" name="userEmail"
+                       placeholder="Email">
+                <div ng-messages="insertUserForm.userEmail.$error || insertUserForm.$submitted"
+                     role="alert">
+                    <div ng-message=" required">Inserire email</div>
+                </div>
+            </md-input-container>
+
             <div class="background-transparent-white text-center color-green font-medium margint-top-5-px margin-bottom-10-px padding-10-px"
                  ng-show="user.showSuccess">
                 {{user.message}}
