FORCED NEW USER TO CHANGE PASSWORD
Implementato l'obligo del user di cambiare la password di default al primo login

--- a/components/change-password.html
+++ b/components/change-password.html
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">CAMBIO PASSWORD</h1>
+                <h1 class=" font-iceberg font-x-large">{{title}}</h1>
             </div>
         </div>
     </md-toolbar>
